# libcoap-rs

./: .gitignore  .gitlab-ci.yml  .gitmodules  .reviewdog.yml  CODEOWNERS  Cargo.toml  LICENSE-BSD-2-CLAUSE  NOTICE.md  README.md  SECURITY.md  rustfmt.toml  testfile
.github/workflows/: ci.yml  report.yml  test.yml
data/ci_pipeline_improvements/: coverage.xml
data/coap_uri_fixes/: coverage.xml
data/dtls_rework/: coverage.xml
data/esp_docs_and_v5.3/: coverage.xml
data/fix_observe/: coverage.xml
data/fix_trailing_uri_paths/: coverage.xml
data/library_init_compile_checks/: coverage.xml
data/main/: coverage.xml
data/square-brackets/: coverage.xml
libcoap/: Cargo.toml  README.md  build.rs
libcoap-sys/: Cargo.toml  LICENSE  README.md  build.rs  old_build.rs
libcoap-sys/examples/esp-idf/: .gitignore  Cargo.toml  README.md  sdkconfig.defaults
libcoap-sys/examples/esp-idf/src/: main.rs
libcoap-sys/src/: lib.rs  wrapper.h
libcoap/examples/esp-idf/: Cargo.toml  README.md
libcoap/examples/esp-idf/.github/workflows/: rust_ci.yml
libcoap/examples/esp-idf/src/: main.rs
libcoap/resources/test-keys/ca/: ca.crt.der  ca.crt.pem  ca.key.pem  ca.pub.pem  ca.srl
libcoap/resources/test-keys/client/: client.crt.der  client.crt.pem  client.csr  client.key.der  client.key.pem  client.pub.pem
libcoap/resources/test-keys/server/: server.crt.der  server.crt.pem  server.csr  server.key.der  server.key.pem  server.pub.pem
libcoap/src/: context.rs  crypto.rs  error.rs  event.rs  lib.rs  mem.rs  message.rs  oscore.rs  prng.rs  protocol.rs  request.rs  resource.rs  session.rs  string.rs  transport.rs  types.rs  wrapper.h
libcoap/src/crypto/: mod.rs
libcoap/src/crypto/pki_rpk/: key.rs  mod.rs  pki.rs  rpk.rs
libcoap/src/crypto/psk/: client.rs  key.rs  mod.rs  server.rs
libcoap/src/message/: mod.rs  option_handling.rs  payload.rs  pdu.rs  pdu_builder.rs  request.rs  response.rs
libcoap/src/session/: client.rs  mod.rs  server.rs
libcoap/src/transport/: dtls.rs  mod.rs  tcp.rs  tls.rs  udp.rs
libcoap/tests/: basic_client_server_test.rs  dtls_client_server_test.rs  dtls_pki_client_server_test.rs  dtls_psk_client_server_test.rs  dtls_rpk_client_server_test.rs  tcp_client_server_test.rs  udp_client_server_test.rs  udp_observe_test.rs
libcoap/tests/common/: dtls.rs  mod.rs
