# SPDX-License-Identifier: BSD-2-Clause
#
# Copyright © The libcoap-rs Contributors, all rights reserved.
# This file is part of the libcoap-rs project, see the README file for
# general information on this project and the NOTICE.md and LICENSE files
# for information regarding copyright ownership and terms of use.
#
# Cargo.toml for the libcoap-rs repository/workspace.
[workspace]
members = [
    "libcoap",
    "libcoap-sys",
]
resolver = "2"
