# SPDX-License-Identifier: BSD-2-Clause
# Cargo.toml for libcoap
# Copyright (c) 2022 The NAMIB Project Developers, all rights reserved.
# See the README as well as the LICENSE file for more information.

[package]
name = "libcoap"
description = "An idiomatic wrapper around the libcoap CoAP library for Rust."
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
readme = "README.md"
homepage = "https://github.com/namib-project/libcoap-rs"
repository = "https://github.com/namib-project/libcoap-rs"
authors = ["Hugo Hakim Damer <hdamer@uni-bremen.de>"]
categories = ["api-bindings", "network-programming", "embedded"]
keywords = ["coap", "libcoap"]

[features]
default = ["client", "server", "dtls", "tcp", "dtls_openssl"]
client = []
server = []
dtls = ["libcoap-sys/dtls"]
dtls_tinydtls = ["libcoap-sys/dtls_backend_tinydtls"]
dtls_openssl = ["libcoap-sys/dtls_backend_openssl"]
dtls_gnutls = ["libcoap-sys/dtls_backend_gnutls"]
dtls_mbedtls = ["libcoap-sys/dtls_backend_mbedtls"]
tcp = []
nightly = []

[dependencies]
libcoap-sys = {path = "../libcoap-sys"}
libc = {version = "^0.2.95"}
num-derive = {version = "^0.3.3"}
num-traits = {version = "^0.2.14"}
url = {version = "^2.2"}
rand = {version = "^0.8.4"}
thiserror = "^1.0"
