# SPDX-License-Identifier: BSD-2-Clause
# Cargo.toml for libcoap
# This file is part of the libcoap-rs crate, see the README and LICENSE files for
# more information and terms of use.
# Copyright © 2021-2024 The NAMIB Project Developers, all rights reserved.

[package]
name = "libcoap-rs"
description = "An idiomatic wrapper around the libcoap CoAP library for Rust."
version = "0.2.2"
edition = "2021"
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/namib-project/libcoap-rs"
authors = ["Hugo Hakim Damer <hdamer@uni-bremen.de>"]
categories = ["api-bindings", "network-programming", "embedded"]
keywords = ["coap", "libcoap"]
resolver = "2"

[features]
default = ["dtls-psk", "tcp", "dtls_openssl", "vendored", "libcoap-sys/default"]
dtls_tinydtls = ["libcoap-sys/dtls_backend_tinydtls"]
dtls_tinydtls_vendored = ["dtls_tinydtls", "libcoap-sys/dtls_backend_tinydtls_vendored"]
dtls_openssl = ["libcoap-sys/dtls_backend_openssl"]
dtls_openssl_vendored = ["dtls_openssl", "libcoap-sys/dtls_backend_openssl_vendored"]
dtls_gnutls = ["libcoap-sys/dtls_backend_gnutls"]
dtls_mbedtls = ["libcoap-sys/dtls_backend_mbedtls"]
dtls_mbedtls_vendored = ["dtls_mbedtls", "libcoap-sys/dtls_backend_mbedtls_vendored"]
dtls-psk = ["libcoap-sys/dtls", "libcoap-sys/dtls-psk"]
dtls-pki = ["libcoap-sys/dtls", "libcoap-sys/dtls-pki"]
dtls-rpk = ["libcoap-sys/dtls", "libcoap-sys/dtls-rpk"]
tcp = ["libcoap-sys/tcp"]
tls = ["libcoap-sys/tls"]
rand = ["dep:rand", "dep:rand_core"]
vendored = ["libcoap-sys/vendored"]

[dependencies]
libcoap-sys = { version = "^0.2.2", path = "../libcoap-sys", default-features = false, features = ["client", "server"] }
libc = { version = "^0.2.95" }
num-derive = { version = "^0.3.3" }
num-traits = { version = "^0.2.14" }
url = { version = "^2.2", optional = true }
rand = { version = "^0.8.4", optional = true }
rand_core = { version = "0.6.4", optional = true }
thiserror = "^1.0"

[build-dependencies]
version-compare = "0.2.0"

[package.metadata.docs.rs]
features = ["dtls", "dtls_openssl", "vendored", "url"]
