# SPDX-License-Identifier: BSD-2-Clause
# Cargo.toml for libcoap
# This file is part of the libcoap-rs crate, see the README and LICENSE files for
# more information and terms of use.
# Copyright © 2021-2024 The NAMIB Project Developers, all rights reserved.

[package]
name = "libcoap-rs"
description = "An idiomatic wrapper around the libcoap CoAP library for Rust."
version = "0.2.2"
edition = "2021"
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/namib-project/libcoap-rs"
authors = ["Hugo Hakim Damer <hdamer@uni-bremen.de>"]
categories = ["api-bindings", "network-programming", "embedded"]
keywords = ["coap", "libcoap"]
resolver = "2"
# Current reason for MSRV (please update when increasing MSRV): Transient dependency "home" requires Rust 1.81.
rust-version = "1.81.0"

[features]
default = ["dtls-psk", "tcp", "vendored", "libcoap-sys/default"]
dtls = ["libcoap-sys/dtls"]
dtls-psk = ["dtls", "libcoap-sys/dtls-psk"]
dtls-pki = ["dtls", "libcoap-sys/dtls-pki"]
dtls-rpk = ["dtls", "libcoap-sys/dtls-rpk"]
dtls-cid = ["dtls-psk", "libcoap-sys/dtls-cid"]
tcp = ["libcoap-sys/tcp"]
tls = ["libcoap-sys/tls"]
rand = ["dep:rand", "dep:rand_core"]
vendored = ["libcoap-sys/vendored"]
dtls-openssl-sys = ["libcoap-sys/dtls-openssl-sys"]
dtls-mbedtls-sys = ["libcoap-sys/dtls-mbedtls-sys"]
dtls-tinydtls-sys = ["libcoap-sys/dtls-tinydtls-sys"]
dtls-openssl-sys-vendored = ["libcoap-sys/dtls-openssl-sys-vendored"]
dtls-tinydtls-sys-vendored = ["libcoap-sys/dtls-tinydtls-sys-vendored"]

[dependencies]
libcoap-sys = { version = "^0.2.2", path = "../libcoap-sys", default-features = false, features = ["client", "server"] }
libc = { version = "^0.2.95" }
num-derive = { version = "^0.3.3" }
num-traits = { version = "^0.2.14" }
url = { version = "^2.2", optional = true }
rand = { version = "^0.8.4", optional = true }
rand_core = { version = "0.6.4", optional = true }
thiserror = "^1.0"

[build-dependencies]
version-compare = "0.2.0"
anyhow = "1.0.95"

[package.metadata.docs.rs]
features = ["dtls", "dtls_openssl", "vendored", "url"]

[target.'cfg(target_os="espidf")'.dependencies]
esp-idf-sys = { version = "0.36.1" }

# For ESP-IDF builds, we need to add the espressif/coap component ourselves here,
# as esp-idf-sys only inspects the metadata for direct dependencies.
# Otherwise, users of this library would always also have to depend on libcoap-sys
# or add this snippet themselves.
[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/coap", version = "4.3.5~3" }
bindings_header = "src/wrapper.h"