[package]
name = "libcoap-sys-esp-idf-example"
version = "0.1.0"
authors = ["Hugo Hakim Damer <hdamer@uni-bremen.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "libcoap-sys-esp-idf-example"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-sys = { version = "0.36.1" }
libcoap-sys = { version = "*", path = "../../" }

[build-dependencies]
embuild = "0.33"

[workspace]
